--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Resume</title>
+    <title>John Yohan Lee</title>
 </head>
 
 <body>
