--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -61,34 +61,7 @@
         </article>
         <article id="mainRight">
             <section>
-                <h2>PROBLEM</h2>
-                <p>Approximately 70% of all maternal mortality cases in the world occur in Sub-Saharan Africa countries
-                    because of unequally despaired, under-resourced healthcare settings and low numbers of skilled
-                    healthcare workers.
-
-                    Somalia has the 6th highest MMR worldwide, with 1 in 18 dying from pregnancy-related complications.
-                    Unfortunately, most of these complications could have been easily cured, avoided, or managed.
-
-                    The technology nowadays allows for remote tracking of women's health status, which is vital since
-                    70% of the population lives outside urban areas with low or no access to healthcare facilities. The
-                    urgency for the technology is high because the average age in Somalia is 17 years, and the typical
-                    childbearing age is between 15 and 45, implying that there will be an exponential increase in
-                    pregnancies over the next three decades. In the next two years, the need will increase by 25%, but
-                    the shortage of healthcare workers remains.
-                </p>
-            </section>
-            <section>
-                <h2>GOALS</h2>
-                <p>The AI solution that will be built will let a person send her matrix of data (related to personal
-                    health) and the AI solution will predict the potential health hazards the person may encounter
-                    during pregnancy. The goal of such an AI system will be to reduce maternal mortality.
-
-                    Optionally, the AI challenge may also build an end-to-end tool that will let a person upload her
-                    data via the tool and the person can see the outcome from the AI model.
-                </p>
-            </section>
-            <section>
-                <h2>RISK PREDICTION</h2>
+                <h2>AI RISK PREDICTION</h2>
                 <p>
                     Please populate the input fields listed below and click predict to continue.
                 </p>
@@ -202,6 +175,33 @@
                         http.send(JSON.stringify({ "Age": [feature1], "SystolicBP": [feature2], "DiastolicBP": [feature3], "BS": [feature4], "BodyTemp": [feature5], "HeartRate": [feature6] }));
                     }
                 </script>
+            </section>
+            <section>
+                <h2>PROBLEM STATEMENT</h2>
+                <p>Approximately 70% of all maternal mortality cases in the world occur in Sub-Saharan Africa countries
+                    because of unequally despaired, under-resourced healthcare settings and low numbers of skilled
+                    healthcare workers.
+
+                    Somalia has the 6th highest MMR worldwide, with 1 in 18 dying from pregnancy-related complications.
+                    Unfortunately, most of these complications could have been easily cured, avoided, or managed.
+
+                    The technology nowadays allows for remote tracking of women's health status, which is vital since
+                    70% of the population lives outside urban areas with low or no access to healthcare facilities. The
+                    urgency for the technology is high because the average age in Somalia is 17 years, and the typical
+                    childbearing age is between 15 and 45, implying that there will be an exponential increase in
+                    pregnancies over the next three decades. In the next two years, the need will increase by 25%, but
+                    the shortage of healthcare workers remains.
+                </p>
+            </section>
+            <section>
+                <h2>PROJECT GOALS</h2>
+                <p>The AI solution that will be built will let a person send her matrix of data (related to personal
+                    health) and the AI solution will predict the potential health hazards the person may encounter
+                    during pregnancy. The goal of such an AI system will be to reduce maternal mortality.
+
+                    Optionally, the AI challenge may also build an end-to-end tool that will let a person upload her
+                    data via the tool and the person can see the outcome from the AI model.
+                </p>
             </section>
         </article>
     </main>
