--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -27,6 +27,14 @@
                 </p>
             </section>
             <section>
+                <h2>PROJECT</h2>
+                <p>
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                    <a href="https://codebasics.io/event/codebasics-resume-project-challenge">Codebasics Project</a>
+                </p>
+                <p></p>
+            </section>
+            <section>
                 <h2>SKILLS</h2>
                 <p>Python, Machine Learning, Deep Learning, DevOps, MLOps, AWS, Azure, Power BI, SQL, IaC</p>
             </section>
@@ -51,17 +59,6 @@
             </section>
         </article>
         <article id="mainRight">
-            <section>
-                <h2>PROBLEM</h2>
-                <p>AtliQo is one of the leading telecom providers in India and launched it's 5G plans in May 2022 along
-                    with other telecom providers.
-                    However, the management noticed a decline in their active users and revenue growth post 5G launch in
-                    May 2022. Atliqo's business director requested to provide a comparison report
-                    of KPIs between pre and post-periods of the 5G launch. The management is keen to compare the
-                    performance between these periods and get insights which would enable them to make informed
-                    decisions to recover their active user rate by optimizing internet plans.
-                </p>
-            </section>
             <section>
                 <h2>AI PLAN OPTIMIZER</h2>
                 <p>
@@ -140,6 +137,17 @@
                         http.send(JSON.stringify({ "city_name": [feature1], "time_period": [feature2], "valid_period": [feature3], "data_size": [feature4] }));
                     }
                 </script>
+            </section>
+            <section>
+                <h2>PROBLEM STATEMENT</h2>
+                <p>AtliQo is one of the leading telecom providers in India and launched it's 5G plans in May 2022 along
+                    with other telecom providers.
+                    However, the management noticed a decline in their active users and revenue growth post 5G launch in
+                    May 2022. Atliqo's business director requested to provide a comparison report
+                    of KPIs between pre and post-periods of the 5G launch. The management is keen to compare the
+                    performance between these periods and get insights which would enable them to make informed
+                    decisions to recover their active user rate by optimizing internet plans.
+                </p>
             </section>
         </article>
     </main>
