--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -12,8 +12,8 @@
         <hr>
         Telecom Market Insights Dashboard and AI Plan Optimizer
         <hr>
-        <iframe title="hospitality_bookings - Page 1" width="910" height="572"
-            src="https://app.powerbi.com/view?r=eyJrIjoiOTFlZDNiZGYtNzJjNy00Y2Y1LWE2ODUtZWRmMDhjMTU0ZWRlIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
+        <iframe title="telecom - Page 1" width="910" height="572"
+            src="https://app.powerbi.com/view?r=eyJrIjoiNGQ2YjAxNGYtNjMwZi00YTA5LWE5NzYtOTMzZDdiYTM5YTY0IiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
     </header>
     <main>
