--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -12,7 +12,7 @@
         <hr>
         Maternal Mortality Dashboard and AI Risk Prediction
         <hr>
-        <iframe title="mobileuurka - Page 1" width="910" height="572"
+        <iframe title="mobileuurka - Page 1" width="100%" height="85%"
             src="https://app.powerbi.com/view?r=eyJrIjoiZDIwMzAxNjQtNGNkOC00ZTI1LTkxZTgtMzE2YzVkZDBkODRiIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
     </header>
