--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <p>
                     Cloud Platform and Infrastructure Certification
                 </p>
-                <b>Bachelor of Science (BSc), Computer Science</b>
+                <b>The University of Auckland</b>
                 <p>
-                    The University of Auckland
+                    Bachelor of Science (BSc), Computer Science
                 </p>
             </section>
             <section>
