--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -117,7 +117,7 @@
                     </script>
                     <button onclick="predict();">predict</button>
                 </ol>
-                <p>Monthly Plan Revenue Prediction: <b id="prediction">...</b></p>
+                <p>Monthly Plan Revenue Prediction: <b style="color:#8ECAE6" id="prediction">...</b></p>
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function predict() {
