--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -166,7 +166,7 @@
                     </script>
                 </ol>
                 <button onclick="predict();">predict</button>
-                <p>Prediction: <b id="prediction">...</b></p>
+                <p>Stock Delivery Prediction: <b style="color:#FFB703" id="prediction">...</b></p>
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function predict() {
