--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -153,7 +153,7 @@
                     </script>
                     <button onclick="predict();">predict</button>
                 </ol>
-                <p>Patient Risk Prediction: <b style="color:#AFFC41" id="prediction">...</b></p>
+                <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">...</b></p>
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function predict() {
