--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -12,7 +12,7 @@
         <hr>
         Maternal Mortality Dashboard and AI Risk Prediction
         <hr>
-        <iframe title="mobileuurka - Page 1" width="100%" height="91%"
+        <iframe title="mobileuurka - Page 1" width="100%" height="100%"
             src="https://app.powerbi.com/view?r=eyJrIjoiZDIwMzAxNjQtNGNkOC00ZTI1LTkxZTgtMzE2YzVkZDBkODRiIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
     </header>
@@ -24,7 +24,7 @@
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlmobileuurka/notebook/notebook.ipynb">Risk
                         Level
-                        Prediction Notebook</a>
+                        Prediction Analysis</a>
                 </p>
             </section>
             <section>
