--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -12,7 +12,7 @@
         <hr>
         Supply Chain Dashboard and AI Delivery Prediction
         <hr>
-        <iframe title="supplychain - Page 1" width="100%" height="91%"
+        <iframe title="supplychain - Page 1" width="100%" height="100%"
             src="https://app.powerbi.com/view?r=eyJrIjoiY2UzZjZjYmQtNmNmNC00YmMzLTg4YTYtOTViYzU5M2JjMWEzIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
     </header>
@@ -26,7 +26,7 @@
                         href="https://github.com/lyoh001/AzureFunctions/blob/main/mlsupplychain/notebook/notebook_otd.ipynb">On
                         Time
                         Delivery Prediction
-                        Notebook</a>
+                        Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
@@ -34,7 +34,7 @@
                         href="https://github.com/lyoh001/AzureFunctions/blob/main/mlsupplychain/notebook/notebook_ifd.ipynb">In
                         Full
                         Delivery Prediction
-                        Notebook</a>
+                        Analysis</a>
                 </p>
             </section>
             <section>
