--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -157,6 +157,7 @@
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function predict() {
+                        document.getElementById("prediction").value = "..."
                         var feature1 = document.getElementById("feature1").value;
                         var feature2 = document.getElementById("feature2").value;
                         var feature3 = document.getElementById("feature3").value;
