--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -151,13 +151,15 @@
                             output6.innerHTML = this.value;
                         }
                     </script>
-                    <button onclick="predict();">predict</button>
+                    <button onclick="cls(); predict();">predict</button>
                 </ol>
                 <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">...</b></p>
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
-                    function predict() {
+                    function cls() {
                         document.getElementById("prediction").value = "..."
+                    }
+                    function predict() {
                         var feature1 = document.getElementById("feature1").value;
                         var feature2 = document.getElementById("feature2").value;
                         var feature3 = document.getElementById("feature3").value;
