--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -157,7 +157,7 @@
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function cls() {
-                        document.getElementById("prediction").value = "...";
+                        prediction.value = "...";
                     }
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
