--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -151,14 +151,11 @@
                             output6.innerHTML = this.value;
                         }
                     </script>
-                    <button onclick="cls(); predict();">predict</button>
+                    <button onclick="document.getElementById('prediction').value = ''; predict();">predict</button>
                 </ol>
                 <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">...</b></p>
                 <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
-                    function cls() {
-                        "...";
-                    }
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
                         var feature2 = document.getElementById("feature2").value;
