--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -115,10 +115,10 @@
                             output4.innerHTML = this.value;
                         }
                     </script>
-                    <button onclick="predict();">predict</button>
+                    <button
+                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take upto 10~15 seconds during the process.'; predict();">predict</button>
                 </ol>
                 <p>Monthly Plan Revenue Prediction: <b style="color:#FFB703" id="prediction">...</b></p>
-                <p>(*It may take upto 10 seconds to compute the prediction.)</p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
