--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -165,7 +165,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take upto 10~15 seconds during the process.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
                 <p>Stock Delivery Prediction: <b style="color:#8ECAE6" id="prediction">...</b></p>
                 <script>
