--- a/mlmobileuurka/index.html
+++ b/mlmobileuurka/index.html
@@ -152,7 +152,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take upto 10~15 seconds during the process.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
                 <p>Patient Risk Prediction: <b style="color:#1DD3B0" id="prediction">...</b></p>
                 <script>
