--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -116,7 +116,7 @@
                         }
                     </script>
                     <button
-                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take upto 10~15 seconds during the process.'; predict();">predict</button>
+                        onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
                 <p>Monthly Plan Revenue Prediction: <b style="color:#FFB703" id="prediction">...</b></p>
                 <script>
