--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                         $500k per annum. (<a href="https://github.com/lyoh001/AzureBillForecast">project
                             link</a>)
                     </li>
+                    <li>Performed a full analysis on vulnerabilities identified in Azure Security Center
+                        to determine what to prioritise when rectifying highlighted items. (<a
+                            href="https://github.com/lyoh001/AzureSecurityScore">project
+                            link</a>)
+                    </li>
                     <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
                         Total reduction approx. $15k per annum. (<a
                             href="https://github.com/lyoh001/AzureReservedInstance">project
-                            link</a>)
-                    </li>
-                    <li>Performed a root cause analysis for failing automation using Pandas and Power BI and deployed a
-                        new cloud native solution for business continuity. (<a
-                            href="https://github.com/lyoh001/AzureLMS">project
                             link</a>)
                     </li>
                     <li>Convolutional Neural Network image classification model PoC project for identifying Covid19
