--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -12,8 +12,8 @@
         <hr>
         Cloud Audit Insights Dashboard and AI Usage Predictor
         <hr>
-        <iframe title="telecom - Page 1" width="100%" height="100%"
-            src="https://app.powerbi.com/view?r=eyJrIjoiNmVmYTExOWYtZjI1Yy00NDAzLTgxZjYtZDVlNTU1MThkMTlhIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
+        <iframe title="cloudaudit - Page 1" width="100%" height="100%"
+            src="https://app.powerbi.com/view?r=eyJrIjoiZjdjNDQ5NTEtYTlhMC00ODc1LTg5NGMtYTRkMTAwNDZjOTRjIiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
     </header>
     <main>
