--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -27,10 +27,14 @@
                 </p>
             </section>
             <section>
-                <h2>PROJECT</h2>
+                <h2>ARCHITECTURE DESIGN</h2>
                 <p>
-                    <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://codebasics.io/event/codebasics-resume-project-challenge">Codebasics Project</a>
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/lyoh001/AzureBillForecast">Cloud Usage Forecasting</a>
+                </p>
+                <p>
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/lyoh001/AzureSecurityScore">Cloud Security Analysis</a>
                 </p>
                 <p></p>
             </section>
@@ -70,7 +74,7 @@
                     <button
                         onclick="document.getElementById('prediction').innerHTML = 'Computing the prediction. It may take up to 10 seconds during the process.'; predict();">predict</button>
                 </ol>
-                <p>Monthly Cloud Usage Prediction: <b style="color:#DC2F02" id="prediction">...</b></p>
+                <p>Monthly Cloud Usage Prediction: <b style="color:#E85D04" id="prediction">...</b></p>
                 <script>
                     function predict() {
                         var feature1 = document.getElementById("feature1").value;
@@ -89,13 +93,9 @@
             </section>
             <section>
                 <h2>PROBLEM STATEMENT</h2>
-                <p>AtliQo is one of the leading telecom providers in India and launched it's 5G plans in May 2022 along
-                    with other telecom providers.
-                    However, the management noticed a decline in their active users and revenue growth post 5G launch in
-                    May 2022. Atliqo's business director requested to provide a comparison report
-                    of KPIs between pre and post-periods of the 5G launch. The management is keen to compare the
-                    performance between these periods and get insights which would enable them to make informed
-                    decisions to recover their active user rate by optimizing internet plans.
+                <p>Helped business building one stop shop cloud dashboard for forecasting pricing and analysing security
+                    vulnerabilities by using LSTM time series, Tensorflow, Pandas and Matplotlib saving over $500k per
+                    annum.
                 </p>
             </section>
         </article>
