--- a/index.html
+++ b/index.html
@@ -97,14 +97,9 @@
                     Cenitex | 2012 - Present
                 </p>
                 <ul>
-                    <li>Helped business decide in dynamic pricing by identifying business insights and forecasting the
-                        trends for future months using LSTM time series, Tensorflow, Pandas and Matplotlib saving over
-                        $500k per annum. (<a href="https://github.com/lyoh001/AzureBillForecast">project
-                            link</a>)
-                    </li>
-                    <li>Performed a full analysis on vulnerabilities identified in Azure Security Center
-                        to determine what to prioritise when rectifying highlighted items. (<a
-                            href="https://github.com/lyoh001/AzureSecurityScore">project
+                    <li>Helped business building one stop shop cloud dashboard for forecasting pricing and analysing
+                        security vulnerabilities by using LSTM time series, Tensorflow, Pandas and Matplotlib saving
+                        over $500k per annum.(<a href="https://lyoh001.com/mlcloudaudit">project
                             link</a>)
                     </li>
                     <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
