--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -29,14 +29,13 @@
             <section>
                 <h2>ARCHITECTURE DESIGN</h2>
                 <p>
-                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <i class="fab fa-github" aria-hidden="true"></i>
                     <a href="https://github.com/lyoh001/AzureBillForecast">Cloud Usage Forecasting</a>
                 </p>
                 <p>
-                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <i class="fab fa-github" aria-hidden="true"></i>
                     <a href="https://github.com/lyoh001/AzureSecurityScore">Cloud Security Analysis</a>
                 </p>
-                <p></p>
             </section>
             <section>
                 <h2>SKILLS</h2>
