--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -38,6 +38,14 @@
                 </p>
             </section>
             <section>
+                <h2>ARCHITECTURE DESIGN</h2>
+                <p>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
+                        Design</a>
+                </p>
+            </section>
+            <section>
                 <h2>PROJECT</h2>
                 <p>
                     <i class="fa fa-home" aria-hidden="true"></i>
