--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     Cenitex | 2012 - Present
                 </p>
                 <ul>
-                    <li>Helped business building one stop shop cloud dashboard for forecasting pricing and analysing
+                    <li>Helped business building one stop shop dashboard for forecasting pricing and analysing
                         security vulnerabilities by using LSTM time series, Tensorflow, Pandas and Matplotlib saving
-                        over $500k per annum.(<a href="https://lyoh001.com/mlcloudaudit">project
+                        over $500k per annum. (<a href="https://lyoh001.com/mlcloudaudit">project
                             link</a>)
                     </li>
                     <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
