--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <li>Maternal Mortality Prediction: End to end project development covering EDA,
                         Feature Engineering, Power BI, Training Machine Learning & Artificial Neural
                         Network Models, App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://lyoh001.com/mlmobileuurka">project link</a>)
+                            href="https://lyoh001.com/mlmobileuurka"><b>project link</b></a>)
                     </li>
                 </ul>
                 <h3><b>POWER BI PROJECT CHALLENGE</b></h3>
@@ -84,12 +84,12 @@
                     <li>Telecom Revenue Prediction: End to end project development covering EDA, Feature
                         Engineering, Power BI, Training Machine Learning & Artificial Neural Network
                         Models, App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://lyoh001.com/mltelecom">project link</a>)
+                            href="https://lyoh001.com/mltelecom"><b>project link</b></a>)
                     </li>
                     <li>Supply Chain Prediction: End to end project development covering EDA, Feature
                         Engineering, Power BI, Training Machine Learning & Artificial Neural Network
                         Models, App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://lyoh001.com/mlsupplychain">project link</a>)
+                            href="https://lyoh001.com/mlsupplychain"><b>project link</b></a>)
                     </li>
                 </ul>
                 <h3><b>TECHNICAL SPECIALIST</b></h3>
@@ -99,17 +99,15 @@
                 <ul>
                     <li>Helped business building one stop shop dashboard for forecasting pricing and analysing
                         security vulnerabilities by using LSTM time series, Tensorflow, Pandas and Matplotlib saving
-                        over $500k per annum. (<a href="https://lyoh001.com/mlcloudaudit">project
-                            link</a>)
+                        over $500k per annum. (<a href="https://lyoh001.com/mlcloudaudit"><b>project link</b></a>)
                     </li>
                     <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
                         Total reduction approx. $15k per annum. (<a
-                            href="https://github.com/lyoh001/AzureReservedInstance">project
-                            link</a>)
+                            href="https://github.com/lyoh001/AzureReservedInstance"><b>project link</b></a>)
                     </li>
                     <li>Convolutional Neural Network image classification model PoC project for identifying Covid19
-                        using TensorFlow and Keras. (<a href="https://github.com/lyoh001/DLCovid19">project
-                            link</a>)
+                        using TensorFlow and Keras. (<a href="https://github.com/lyoh001/DLCovid19"><b>project
+                                link</b></a>)
                     </li>
                 </ul>
             </section>
