--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -12,7 +12,7 @@
         <hr>
         Virtual Machine Audit Dashboard
         <hr>
-        <iframe title="vmaudit - Page 1" width="100" height="100"
+        <iframe title="vmaudit - Page 1" width="100%" height="100%"
             src="https://app.powerbi.com/view?r=eyJrIjoiOWVkMjc1NDYtM2FjMi00OGM4LThmOTMtMmZiNTcxOWUwNmU5IiwidCI6IjcyMmVhMGJlLTNlMWMtNGIxMS1hZDZmLTk0MDFkNjg1NmUyNCJ9"
             frameborder="0" allowFullScreen="true"></iframe>
 
