--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -3,12 +3,12 @@
 <head>
     <link href="/mlvmaudit/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>VM Audit</title>
+    <title>VIRTUAL MACHINE Audit</title>
 </head>
 
 <body>
     <header id="dashboard">
-        <h1><b>VM</b> AUDIT</h1>
+        <h1><b>VIRTUAL MACHINE</b> AUDIT</h1>
         <hr>
         Virtual Machine Audit Dashboard
         <hr>
