--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/mlvmaudit/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>VIRTUAL MACHINE Audit</title>
+    <title>Virtual Machine Audit</title>
 </head>
 
 <body>
