--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         over $500k per annum. (<a href="https://lyoh001.com/mlcloudaudit"><b>project link</b></a>)
                     </li>
                     <li>Analysed the current cost model for Azure cloud resources by performing EDA with visualization.
-                        Total reduction approx. $15k per annum. (<a
-                            href="https://github.com/lyoh001/AzureReservedInstance"><b>project link</b></a>)
+                        Total reduction approx. $15k per annum. (<a href="https://lyoh001.com/mlvmaudit"><b>project
+                                link</b></a>)
                     </li>
                     <li>Convolutional Neural Network image classification model PoC project for identifying Covid19
                         using TensorFlow and Keras. (<a href="https://github.com/lyoh001/DLCovid19"><b>project
