--- a/mlcloudaudit/index.html
+++ b/mlcloudaudit/index.html
@@ -25,16 +25,21 @@
                     <a href="https://github.com/lyoh001/AzureFunctions/blob/main/mlcloudaudit/notebook/notebook.ipynb">
                         Cloud Usage Prediction Analysis</a>
                 </p>
+                <p>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/lyoh001/AzureSecurityScore/blob/main/notebook/notebook.ipynb">
+                        Cloud Security Analysis</a>
+                </p>
             </section>
             <section>
                 <h2>ARCHITECTURE DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureBillForecast">Cloud Usage Forecasting</a>
+                    <a href="https://github.com/lyoh001/AzureSecurityScore">Cloud Security Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureSecurityScore">Cloud Security Analysis</a>
+                    <a href="https://github.com/lyoh001/AzureBillForecast">Cloud Usage Forecasting</a>
                 </p>
             </section>
             <section>
