--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                 <ul>
                     <li>Maternal Mortality Prediction: End to end project development covering EDA,
                         Feature Engineering, Power BI, Training Machine Learning & Artificial Neural
-                        Network Models, App Deployment via CICD pipeline to the cloud. (<a
-                            href="https://lyoh001.com/mlmobileuurka"><b>project link</b></a>)
+                        Network Models, App Deployment via CICD pipeline to the cloud.
                     </li>
                 </ul>
             </section>
